styles.css
:root {
  --bs-primary: rgb(188, 211, 230);
  --bs-secondary: #957980;
  --bs-light: #f8f5ff;
  --bs-dark: #051424;
}

.btn-primary {
  --bs-btn-bg: var(--bs-primary);
  --bs-btn-border-color: var(--bs-primary);
  --bs-btn-hover-bg:  rgb(72, 102, 127);
  --bs-btn-hover-border-color: rgb(72, 102, 127);
}

.Top {
  background-color: #957980;
  text-align: center;
}

.Bottom{
  background-color: rgb(188, 211, 230);
  height: 50%;
}

.Projects-div{
    background-color: #957980;
    text-align: center;
}

.myImage img {
  max-width: 200px; /* image can fill the width of the container */
  max-height: 250px; /* image won’t overflow vertically */
  height: auto;     /* maintain aspect ratio */
  width: auto;      /* maintain aspect ratio */
}

a {
  color: #957980; /* orange, or any hex, rgb, or named color */
  text-decoration: none; /* optional: removes underline */
}

td {
  padding: 10px 30px;
}

svg * {
  stroke-width: 0;
}

h1 {
  font-size: 7rem;
}

h2 {
  font-size: 4rem;
  color: #f8f5ff;
}

p{
  font-size: 1rem;
}

